--- a/offline.html
+++ b/offline.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en-US" style="height: 100%">
   <head>
     <title>BronyTV</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
-  <body>
+  <body style="height: 100%">
     <div style="width: 100%; height: 100%">
       <table style="margin-left: auto; margin-right: auto; height: 100%">
         <tr>
